|                             C h a n g e L o g                               |
o-----------------------------------------------------------------------------o

o-----------------------------------------------------------------------------o
| Version 0.9.1.9 ( development) 
o-----------------------------------------------------------------------------o
  
  - Add functions to control force of the spring system
  - CalHardwareModel : a object to store and to compute information
    needed to do hardware vertex skinning.
  - Add a time factor to allow reverse time of sync animation.
  - Most of the math functions are now inline.  
  - Add an option to stop a action animation at the end.
  - Add functions to rescale a core model, 
    but this can be done only before creating the CalModel.
  - Fix in the XML loader
  - Add a function to compute the global bounding box of the model.
  - Rename calculateBoundingBox to calculateBoundingBoxes.

o-----------------------------------------------------------------------------o
| Version 0.9.1 ( 29. November 2003) 
o-----------------------------------------------------------------------------o
  - Modifications to the loader to accomplish the 
    X axis (Y/Z) rotation from Keith Fulton <keith@paqrat.com>
  - Implementation of UV coord inversion from Keith Fulton  
  - Implemented loading from generic "data sources", which will allow the
    loading of Cal3d objects from istreams and memory buffers
  - Implementation of mesh morph targets from old_belge
  - Switched object constructors to use initializer lists for performance
    optimization
  - Implementation of Bounding Box calculations

o-----------------------------------------------------------------------------o
| Version 0.9 ( 6. August 2003)                                                 |
o-----------------------------------------------------------------------------o

  - Experimental tangent/texture space support (from the idea of 'Josh' code)