@@ -25,6 +25,7 @@
 
 class CalCoreModel;
 class CalSkeleton;
+class CalAbstractMixer;
 class CalMixer;
 class CalMorphTargetMixer;
 class CalPhysique;
@@ -46,7 +47,7 @@ class CAL3D_API CalModel
 protected:
   CalCoreModel *m_pCoreModel;
   CalSkeleton *m_pSkeleton;
-  CalMixer *m_pMixer;
+  CalAbstractMixer *m_pMixer;
   CalMorphTargetMixer *m_pMorphTargetMixer;
   CalPhysique *m_pPhysique;
   CalSpringSystem *m_pSpringSystem;
@@ -69,6 +70,8 @@ public:
   CalCoreModel *getCoreModel();
   CalMesh *getMesh(int coreMeshId);
   CalMixer *getMixer();
+  CalAbstractMixer *getAbstractMixer();
+  void setAbstractMixer(CalAbstractMixer* pMixer);
   CalMorphTargetMixer *getMorphTargetMixer();
   CalPhysique *getPhysique();
   CalRenderer *getRenderer();
